# windi-messenger

./: .env.example  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2681a4453984_initial.py  3a14a17dbc54_add_idempotency_key_to_message_table.py  51cfc6a7c67c_add_indexes.py  56cc1d5555b8_remove_groupmembers.py  5c69d2330eaf_add_cascade_delete_to_foreign_keys.py  86104c8c65dd_add_chatmember_model.py  a86386916029_update_chatmember_model.py  dff01af2f411_update_messagereadstate.py  eb04f64df5b3_add_idempotency_key_to_message_table.py
scripts/: create_test_data.py  start.sh
src/: exceptions.py  main.py
src/api/v1/: auth.py  chat.py  group.py  message.py  ws.py
src/core/: config.py
src/core/di/: database.py  repositories.py  services.py  user.py
src/models/: __init__.py  base.py  chat.py  group.py  message.py  user.py
src/repositories/: chat.py  chat_member.py  group.py  group_member.py  message.py  message_read_state.py  user.py
src/schemas/: chat.py  group.py  message.py  user.py  websocket.py
src/services/: auth.py  chat.py  connection_manager.py  group.py  message.py  password_hasher.py  token.py
src/services/websocket/: handler.py  manager.py
src/static/: index.html
tests/: test_app.py
