[tool.poetry]
name = "windi-messenger"
version = "0.1.0"
description = ""
authors = ["Timur Kerimov <tim-online@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.38" }
asyncpg = "^0.30.0"
alembic = "^1.14.1"
python-jose = { extras = ["cryptography"], version = "^3.4.0" }
bcrypt = "^4.2.1"
pydantic = { extras = ["email"], version = "^2.10.6" }
websockets = "^15.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "RUF001", "RUF002", "RUF003", "RUF012",
    "COM812", "ISC001",
    "D",
    "RET502", "RET503",
    "ANN401",
    "I001", "INP001",
    "FBT001", "FBT002",
    "PLR0913", "PLR0915",
    "TRY003", "EM101", "EM102", "T201",
    "S101",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
